Adding Disqus-based support page to website
Closes #65

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,6 +40,7 @@
         </ul>
       </li>
 
+      <li class="sidebar-nav-item"><a href="/support/">Support</a></li>
       <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
     </ul>
 
