--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <!-- TOP RIGHT RIBBON: START COPYING HERE -->
     <div class="github-fork-ribbon-wrapper right">
         <div class="github-fork-ribbon">
-            <a href="https://github.com/aik099/qa-tools">Fork me on GitHub</a>
+            <a href="https://github.com/qa-tools/qa-tools">Fork me on GitHub</a>
         </div>
     </div>
     <!-- TOP RIGHT RIBBON: END COPYING HERE -->
