--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,18 +6,18 @@
     </div>
 
     <ul class="sidebar-nav">
-      <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
+      <li class="sidebar-nav-item{% if page.path == "index.md" %} active{% endif %}">
         <a href="/">Home</a>
       </li>
 
       <!-- Examples -->
-      <li class="sidebar-nav-item{% if page.url == "/examples/" %} active{% endif %}">
+      <li class="sidebar-nav-item{% if page.path == "examples/index.md" %} active{% endif %}">
         <a href="/examples/">Examples</a>
         <ul>
           {% assign sorted_pages = site.pages | sort:"name" %}
           {% for node in sorted_pages %}
             {% if node.categories contains "examples" %}
-              <li class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}">
+              <li class="sidebar-nav-item{% if page.path == node.path %} active{% endif %}">
                 <a href="{{ node.url }}">{{ node.title }}</a>
               </li>
             {% endif %}
@@ -25,14 +25,14 @@
         </ul>
       </li>
 
-      <!-- API -->
-      <li class="sidebar-nav-item{% if page.url == "/api/" %} active{% endif %}">
-        <a href="/api/">API</a>
+      <!-- Documentation -->
+      <li class="sidebar-nav-item{% if page.path == "docs/index.md" %} active{% endif %}">
+        <a href="/docs/">Documentation</a>
         <ul>
           {% assign sorted_pages = site.pages | sort:"name" %}
           {% for node in sorted_pages %}
-            {% if node.categories contains "api" %}
-              <li class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}">
+            {% if node.categories contains "docs" %}
+              <li class="sidebar-nav-item{% if page.path == node.path %} active{% endif %}">
                 <a href="{{ node.url }}">{{ node.title }}</a>
               </li>
             {% endif %}
@@ -40,8 +40,13 @@
         </ul>
       </li>
 
-      <li class="sidebar-nav-item"><a href="/support/">Support</a></li>
+      <li class="sidebar-nav-item"><a href="/api/master/">API Reference</a></li>
+
       <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
+
+      <li class="sidebar-nav-item{% if page.path == "support.html" %} active{% endif %}">
+        <a href="/support/">Support</a>
+      </li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
