--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-50631994-1', 'qa-tools.io');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
 
   </script>
