--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,6 @@ layout: default
   <p class="fork_and_edit">
     <i class="github_icon"></i>
     Found a typo ? Something is wrong in this documentation ? Just <a
-        href="https://github.com/qa-tools/qa-tools/edit/gh-pages/{{ page.path }}">fork and edit</a> it !
+        href="https://github.com/qa-tools/qa-tools.github.io/edit/master/{{ page.path }}">fork and edit</a> it !
   </p>
 </div>
