--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
   <!--<link rel="stylesheet" href="/public/css/syntax.css">-->
   <link rel="stylesheet" href="/public/css/pygments.css">
   <link rel="stylesheet" href="/public/css/hyde.css">
+  <link rel="stylesheet" href="/public/css/additional.css">
 
   <link rel="stylesheet" href="/public/css/gh-fork-ribbon.css">
   <!--[if lt IE 9]>
@@ -25,10 +26,11 @@
   <![endif]-->
 
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" href="/public/favicon.ico">
+   <link rel="shortcut icon" href="/public/favicon.ico">
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
