--- a/public/css/additional.css
+++ b/public/css/additional.css
@@ -1,11 +1,18 @@
 .note,
 .warning,
 .info {
-	border-radius: 6px;
-
 	padding: 10px 10px 10px 40px;
 
 	margin: 10px 0;
+}
+
+.round {
+	border-radius: 6px;
+}
+
+
+.border {
+	border: 1px dashed #353535;
 }
 
 .note:before,
@@ -31,6 +38,12 @@
 	color: white;
 }
 
+.note.pastel {
+	background-color: rgba(230, 198, 12, 0.6);
+	/*background-color: #e6c60c;*/
+	color: #353535;
+}
+
 .note:before {
 	content: "\f071";
 }
@@ -40,6 +53,12 @@
 	background: #D8000C;
 }
 
+.warning.pastel {
+	/*background-color: #d8655f;*/
+	background-color: rgba(255, 60, 0, 0.40);
+	color: #353535;
+}
+
 .warning:before {
 	content: "\f06a";
 }
@@ -47,6 +66,11 @@
 .info {
 	color: white;
 	background: #00529B;
+}
+
+.info.pastel {
+	background-color: rgba(0, 100, 255, 0.30);
+	color: #353535;
 }
 
 .info:before {
