Update API links to point to "api" sub-domain instead of sub-folder

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,7 +40,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-nav-item"><a href="/api/master/">API Reference</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.api.url }}">API Reference</a></li>
 
       <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
 
