Replace example pages with link to demo project on GitHub

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
       </li>
 
       <!-- Examples -->
-      <li class="sidebar-nav-item{% if page.path == "examples/index.md" %} active{% endif %}">
+      <li class="sidebar-nav-item{% if page.path == "examples.md" %} active{% endif %}">
         <a href="/examples/">Examples</a>
         <ul>
           {% assign sorted_pages = site.pages | sort:"name" %}
